--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,12 @@
         "activityBar.inactiveForeground": "#871872",
         "activityBarBadge.foreground": "#000000",
         "activityBarBadge.background": "#F58B5D",
-        "statusBar.foreground": "#FFD1CD",
-        "statusBar.background": "#A03E36",
-        "statusBarItem.hoverBackground": "#643B1B",
-        "statusBarItem.remoteForeground": "#F8E088",
-        "statusBarItem.remoteBackground": "#755D05",
-        "statusBar.debuggingForeground": "#0E0100",
-        "statusBar.debuggingBackground": "#D7756D"
+        "statusBar.foreground": "#B3FF91",
+        "statusBar.background": "#307F0C",
+        "statusBarItem.hoverBackground": "#1C5E22",
+        "statusBarItem.remoteForeground": "#9AFFC8",
+        "statusBarItem.remoteBackground": "#0F8545",
+        "statusBar.debuggingForeground": "#000000",
+        "statusBar.debuggingBackground": "#67B643"
     }
 }
