--- a/.env.EXAMPLE
+++ b/.env.EXAMPLE
@@ -3,3 +3,9 @@ DB_USER=root
 DB_PASSWORD=password
 DB_HOST=localhost
 SESSION_SECRET=secret
+
+## 3rd party
+
+// TODO: make sure that when we deploy, we add the `SENDGRID_API_KEY` to the
+// TODO: Heroku app's configuration.
+SENDGRID_API_KEY=<your api key>
