--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "mysql2": "^3.3.0",
+    "node-schedule": "^2.1.1",
     "sequelize": "^6.31.1"
   }
 }
